Added Transition structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(OCR C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(OCR main.c Node.h Network.h Layer.h Node.c Layer.c Network.c)
+add_executable(OCR main.c Node.h Network.h Layer.h Node.c Layer.c Network.c Transition.h Transition.c)
