--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,10 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+#Manual ignore
+cmake-build-debug/
+.idea/
+CMakeLists.txt
+SaveTransitions/*
+
