--- a/.gitignore
+++ b/.gitignore
@@ -51,8 +51,13 @@ Module.symvers
 Mkfile.old
 dkms.conf
 
-#Manual ignore
+
+# Manual ignore
+
+# CLion generated
 cmake-build-debug/
 .idea/
 CMakeLists.txt
-Save/
+
+# Exec generated
+Save/*
